gccida/c3/invalidate_for_call
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_for_call/src/cse.c:2820:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v28 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v27] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_for_call/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_for_call/src/obj/cse.o] Error 1
